# rust-excel-parser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  create_test_xlsx.py  example_usage.md  test.docx  test2.docx  test3.docx  test_data.py
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/doc-parser/: Cargo.toml  DEVELOPER_GUIDE.md  README.md  TABLE_EXTRACTION_DESIGN.md  TROUBLESHOOTING.md
src/doc-parser/examples/: basic_usage.rs  batch_processing.rs
src/doc-parser/src/: error.rs  lib.rs  main.rs
src/doc-parser/src/cli/: mod.rs
src/doc-parser/src/output/: json.rs  markdown.rs  mod.rs  text.rs
src/doc-parser/src/parser/: doc.rs  docx.rs  mod.rs  table.rs  text_extractor.rs
src/excel-parser/: Cargo.toml
src/excel-parser/src/output/: csv.rs  table.rs
src/excel-parser/src/parser/: mod.rs
src/output/: json.rs  mod.rs
src/parser/: mod.rs
src/pdf-parser/: Cargo.toml
src/pdf-parser/src/: error.rs  lib.rs  main.rs
src/pdf-parser/src/cli/: mod.rs
src/pdf-parser/src/output/: csv.rs  json.rs  markdown.rs  mod.rs  text.rs
src/pdf-parser/src/parser/: mod.rs
src/ppt-parser/: Cargo.toml
src/ppt-parser/src/: error.rs  lib.rs  main.rs
src/ppt-parser/src/cli/: mod.rs
src/ppt-parser/src/output/: html.rs  json.rs  markdown.rs  mod.rs  text.rs
src/ppt-parser/src/parser/: mod.rs
