[package]
name = "excel-parser"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
description = "A cross-platform Excel parser that converts Excel files to text formats"
license = "MIT"
repository = "https://github.com/example/excel-parser"
keywords = ["excel", "parser", "csv", "xlsx", "xls"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "excel-parser"
path = "src/main.rs"

[dependencies]
calamine = "0.28"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
tabled = "0.16"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
