[workspace]
members = [
    "src/excel-parser",
    "src/doc-parser",
]
resolver = "2"

[workspace.dependencies]
# 共享依赖版本管理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
tempfile = "3.10"

# DOC解析相关依赖
docx-rs = "0.4"
dotext = "0.1"
regex = "1.0"
glob = "0.3"