[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code"]
description = "A cross-platform PDF parser that converts PDF files to multiple text formats"
license = "MIT"

[[bin]]
name = "pdf-parser"
path = "src/main.rs"

[lib]
name = "pdf_parser"
path = "src/lib.rs"

[dependencies]
# 共享工作区依赖
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }

# PDF解析相关依赖
pdf-extract = "0.7"
lopdf = "0.32"
tabled = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }